dnl Process this file with autoconf to produce a configure script.
AC_INIT(md2.h)

AC_CANONICAL_HOST
OS_TYPE="$host"
AC_SUBST(OS_TYPE)

VERSION=`sed -e 's/^.*"\(.*\)";$/\1/' version.c`
echo "Package: libmd-$VERSION"
AC_SUBST(VERSION)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_RANLIB

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

AC_OUTPUT(docs/Makefile Makefile)
